objects/ccpe_r__Skill_Rate__c.object
<CustomObject>
    <description>Allows different rates for different skills to be set up for each account and rate card</description>
    <fields>
        <fullName>ccpe_r__Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Rate_Card__c</fullName>
        <label>Rate Card</label>
        <referenceTo>ccpe_r__Rate_Card__c</referenceTo>
        <relationshipLabel>Skill Rates</relationshipLabel>
        <relationshipName>Skill_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Work_Type__c</fullName>
        <label>Work Type</label>
        <referenceTo>project_cloud__Work_Type__c</referenceTo>
        <relationshipLabel>Skill Rates</relationshipLabel>
        <relationshipName>Skill_Rates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Skill Rate</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Skill Rate Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>